--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name" : "com.github.pandrabox.emoteprefab",
     "version" : "1.0.1",
-    "displayName" : "Emoteprefab",
+    "displayName" : "EmotePrefab",
     "author": {
       "name": "pandra"
     },
