--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,3 +94,13 @@ jobs:
             ${{ env.unityPackage }}
             ${{ env.packagePath }}/package.json
           tag_name: ${{ env.version }}
+
+
+      # Trigger the build-listing workflow
+      - name: Trigger build-listing Workflow
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/pandrabox/vpm/dispatches \
+            -d '{"event_type": "trigger-build-listing"}'
