--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,20 +47,21 @@ jobs:
     
 
       # Check if Tag already exists
-      #- name: Check if Tag Exists
-      #  id: check_tag
-      #  uses: rickstaa/action-contains-tag@v1
-      #  with:
-      #    reference: "main"
-      #    tag: {{ steps.version.outputs.value }}
-      #    id: contains_tag
-      #  run: |
-      #    if [[ ${{ steps.contains_tag.outputs.retval }} != 'true' ]]; then
-      #      echo "Branch/commit already contain the tag."
-      #      exit 1
-      #    else
-      #      echo "Branch/commit did not contain the tag."
-      #    fi
+      - name: Check if Tag Exists
+        id: check_tag
+        uses: rickstaa/action-contains-tag@v1
+        with:
+          reference: "main"
+          tag: ${{ steps.version.outputs.value }}
+
+      - name: Process Tag Check Result
+        run: |
+          if [[ "${{ steps.check_tag.outputs.retval }}" == 'true' ]]; then
+            echo "Branch/commit already contains the tag."
+            exit 1
+          else
+            echo "Branch/commit did not contain the tag."
+          fi
 
 
       # Configure the Environment Variables needed for releasing the Package
