--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,19 +65,22 @@ jobs:
           package-path: ${{ env.unityPackage }}
           include-files: metaList
       
-      # Make a release tag of the version from the package.json file 
-      - name: Create Tag
-        id: tag_version
-        uses: rickstaa/action-create-tag@88dbf7ff6fe2405f8e8f6c6fdfd78829bc631f83
-        with:
-          tag: "${{ env.version }}"
       
-      # Publish the Release to GitHub
-      - name: Make Release
-        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
-        with:
-          files: |
-            ${{ env.zipFile }}
-            ${{ env.unityPackage }}
-            ${{ env.packagePath }}/package.json
-          tag_name: ${{ env.version }}
+      if: needs.config.outputs.config_package == 'false'
+      step: 
+        # Make a release tag of the version from the package.json file 
+        - name: Create Tag
+          id: tag_version
+          uses: rickstaa/action-create-tag@88dbf7ff6fe2405f8e8f6c6fdfd78829bc631f83
+          with:
+            tag: "${{ env.version }}"
+        
+        # Publish the Release to GitHub
+        - name: Make Release
+          uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
+          with:
+            files: |
+              ${{ env.zipFile }}
+              ${{ env.unityPackage }}
+              ${{ env.packagePath }}/package.json
+            tag_name: ${{ env.version }}
