--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,31 @@ jobs:
       run: |
           echo "configPackage=true" >> $GITHUB_OUTPUT;
 
+  # Get Version
+  GetTargetVersion:
+    needs: config
+    runs-on: ubuntu-latest
+    outputs:
+      TargetVersion: ${{ steps.version.outputs.value }}
+    env:
+      packagePath: .
+    steps:
+      # Checkout Local Repository
+      - name: Checkout
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
+
+      # Get the Package version based on the package.json file
+      - name: Get Version
+        id: version
+        uses: zoexx/github-action-json-file-properties@b9f36ce6ee6fe2680cd3c32b2c62e22eade7e590
+        with: 
+            file_path: "${{ env.packagePath }}/package.json"
+            prop_path: "version"
+
   # Build and release the Package
   # If the repository is not configured properly, this job will be skipped
   build:
-    needs: config
+    needs: GetTargetVersion
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -35,19 +56,22 @@ jobs:
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
       # Get the Package version based on the package.json file
-      - name: Get Version
-        id: version
-        uses: zoexx/github-action-json-file-properties@b9f36ce6ee6fe2680cd3c32b2c62e22eade7e590
-        with: 
-            file_path: "${{ env.packagePath }}/package.json"
-            prop_path: "version"
+      #- name: Get Version
+      #  id: version
+      #  uses: zoexx/github-action-json-file-properties@b9f36ce6ee6fe2680cd3c32b2c62e22eade7e590
+      #  with: 
+      #      file_path: "${{ env.packagePath }}/package.json"
+      #      prop_path: "version"
+
+      #Get VersionEnv
+      - name : Set VersionEnv
+        run: echo "version=${{ needs.GetTargetVersion.outputs.TargetVersion.value }}" >> $GITHUB_ENV
     
       # Configure the Environment Variables needed for releasing the Package
       - name: Set Environment Variables
         run: |
-          echo "zipFile=${{ vars.PACKAGE_NAME }}-${{ steps.version.outputs.value }}".zip >> $GITHUB_ENV
-          echo "unityPackage=${{ vars.PACKAGE_NAME }}-${{ steps.version.outputs.value }}.unitypackage" >> $GITHUB_ENV
-          echo "version=${{ steps.version.outputs.value }}" >> $GITHUB_ENV
+          echo "zipFile=${{ vars.PACKAGE_NAME }}-${{ v.version }}".zip >> $GITHUB_ENV
+          echo "unityPackage=${{ vars.PACKAGE_NAME }}-${{ v.version }}.unitypackage" >> $GITHUB_ENV
 
       # Zip the Package for release
       - name: Create Package Zip
