--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
           tag: "${{ steps.version.outputs.value }}"
           frail: false
       - run: |
-          if [[ ${{ steps.contains_tag.outputs.retval }} != 'true' ]]; then
+          if ${{ steps.contains_tag.outputs.retval }} then
             echo "Branch/commit did contain the tag."
           else
             echo "Branch/commit did not contain the tag."
