--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       TargetVersion: ${{ steps.version.outputs.value }}
+      TagExist: ${{ steps.contains_tag.outputs.retval }}
     env:
       packagePath: .
     steps:
@@ -52,15 +53,6 @@ jobs:
           tag: "${{ steps.version.outputs.value }}"
           frail: false
 
-      # Output Result based on condition
-      - name: Output Result
-        if: ${{ steps.contains_tag.outputs.retval == 'true' }}
-        run: echo "Branch/commit did contain the tag."
-
-      - name: Output No Tag
-        if: ${{ steps.contains_tag.outputs.retval != 'true' }}
-        run: echo "Branch/commit did not contain the tag."
-
   # Build and release the Package
   # If the repository is not configured properly, this job will be skipped
   build:
@@ -70,7 +62,7 @@ jobs:
       contents: write
     env:
       packagePath: .
-    if: needs.config.outputs.config_package == 'true'
+    if: needs.GetTargetVersion.outputs.TagExist.value == 'false'
     steps:
 
       # Checkout Local Repository
