--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,3 +122,18 @@ jobs:
       #        ${{ env.unityPackage }}
       #        ${{ env.packagePath }}/package.json
       #      tag_name: ${{ env.version }}
+
+      
+  vpmWebsiteUpload:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+    - name: Trigger build-listing workflow
+      run: |
+        curl -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/pandrabox/vpm/dispatches \
+          -d '{"event_type": "trigger-build-listing"}'
