--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,14 @@
+
 name: test
 
 on:
   workflow_dispatch:
+
 jobs:
   build:
+    name: Greeting
+    runs-on: ubuntu-18.04
     steps:
+      - name: Hello World
         run: |
           echo "${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}"
