--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,7 @@ on:
 
 jobs:
   build:
-    name: Greeting
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Hello World
         run: |
