--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,17 +69,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
-      # Get the Package version based on the package.json file
-      #- name: Get Version
-      #  id: version
-      #  uses: zoexx/github-action-json-file-properties@b9f36ce6ee6fe2680cd3c32b2c62e22eade7e590
-      #  with: 
-      #      file_path: "${{ env.packagePath }}/package.json"
-      #      prop_path: "version"
-
       #Get VersionEnv
       - name : Set VersionEnv
-        run: echo "version=${{ needs.GetTargetVersion.outputs.TargetVersion }}" >> $GITHUB_ENV
+        run: |
+           echo "version=${{ needs.GetTargetVersion.outputs.TargetVersion }}" >> $GITHUB_ENV
+           echo "PACKAGE_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
+
     
       # Configure the Environment Variables needed for releasing the Package
       - name: Set Environment Variables
