--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,18 +69,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
-      #Get VersionEnv
-      - name : Set VersionEnv
+      #Configure the Environment Variables needed for releasing the Package
+      - name : Set Environment Variables
         run: |
            echo "version=${{ needs.GetTargetVersion.outputs.TargetVersion }}" >> $GITHUB_ENV
-           echo "PACKAGE_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
-
-    
-      # Configure the Environment Variables needed for releasing the Package
-      - name: Set Environment Variables
-        run: |
-          echo "zipFile=${{ vars.PACKAGE_NAME }}-${{ env.version }}".zip >> $GITHUB_ENV
-          echo "unityPackage=${{ vars.PACKAGE_NAME }}-${{ env.version }}.unitypackage" >> $GITHUB_ENV
+           echo "RepoName=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
+           echo "zipFile=${{ env.RepoName }}-${{ env.version }}".zip >> $GITHUB_ENV
+           echo "unityPackage=${{ env.RepoName }}-${{ env.version }}.unitypackage" >> $GITHUB_ENV
 
       # Zip the Package for release
       - name: Create Package Zip
