--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,10 +70,13 @@ jobs:
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
       #Configure the Environment Variables needed for releasing the Package
-      - name : Set Environment Variables
+      - name : Set Environment Variables1
         run: |
            echo "version=${{ needs.GetTargetVersion.outputs.TargetVersion }}" >> $GITHUB_ENV
            echo "RepoName=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
+
+      - name : Set Environment Variables2
+        run: |
            echo "zipFile=${{ env.RepoName }}-${{ env.version }}".zip >> $GITHUB_ENV
            echo "unityPackage=${{ env.RepoName }}-${{ env.version }}.unitypackage" >> $GITHUB_ENV
 
