--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Create UnityPackage
         uses: pCYSl5EDgo/create-unitypackage@cfcd3cf0391a5ef1306342794866a9897c32af0b
         with:
-          working-folder: "${{ env.packagePath }}"
+          working-folder: "${{ github.workspace }}"
           package-path: "${{ env.unityPackage }}"
           include-files: metaList
       
