--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,13 +104,38 @@ jobs:
         with:
           tag: "${{ env.version }}"
       
+      # check files
+      - name: Check if the zipFile exists
+        run: |
+          if [ ! -f "${{ github.workspace }}/${{ env.zipFile }}" ]; then
+            echo "File not found: ${{ github.workspace }}/${{ env.zipFile }}"
+          else
+            echo "Found: ${{ github.workspace }}/${{ env.zipFile }}"
+          fi
+
+      - name: Check if the unityPackage exists
+        run: |
+          if [ ! -f "${{ github.workspace }}/${{ env.unityPackage }}" ]; then
+            echo "File not found: ${{ github.workspace }}/${{ env.unityPackage }}"
+          else
+            echo "Found: ${{ github.workspace }}/${{ env.unityPackage }}"
+          fi
+
+      - name: Check if the package.json exists
+        run: |
+          if [ ! -f "${{ github.workspace }}/${{ env.packagePath }}/package.json" ]; then
+            echo "File not found: ${{ github.workspace }}/${{ env.packagePath }}/package.json"
+          else
+            echo "Found: ${{ github.workspace }}/${{ env.packagePath }}/package.json"
+          fi
+
       # Publish the Release to GitHub
       - name: Make Release
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
         with:
           files: |
-            ${{ env.zipFile }}
-            ${{ env.unityPackage }}
+            ${{ github.workspace }}/${{ env.zipFile }}
+            ${{ github.workspace }}/${{ env.unityPackage }}
             ${{ env.packagePath }}/package.json
           tag_name: ${{ env.version }}
 
