--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,6 @@ jobs:
       - name : Set Environment Variables2
         run: |
            echo "zipFile=${{ env.RepoName }}-${{ env.version }}".zip >> $GITHUB_ENV
-           echo "unityPackage=${{ env.RepoName }}-${{ env.version }}.unitypackage" >> $GITHUB_ENV
 
       # Zip the Package for release
       - name: Create Package Zip
@@ -89,14 +88,6 @@ jobs:
       - name: Track Package Meta Files
         run: find "${{ env.packagePath }}/" -name \*.meta >> metaList
       
-      # Make a UnityPackage version of the Package for release
-      - name: Create UnityPackage
-        uses: pCYSl5EDgo/create-unitypackage@master
-        with:
-          working-folder: "${{ github.workspace }}"
-          package-path: "${{ github.workspace }}/${{ env.unityPackage }}"
-          include-files: metaList
-      
       # Make a release tag of the version from the package.json file 
       - name: Create Tag
         id: tag_version
@@ -104,38 +95,12 @@ jobs:
         with:
           tag: "${{ env.version }}"
       
-      # check files
-      - name: Check if the zipFile exists
-        run: |
-          if [ ! -f "${{ github.workspace }}/${{ env.zipFile }}" ]; then
-            echo "File not found: ${{ github.workspace }}/${{ env.zipFile }}"
-          else
-            echo "Found: ${{ github.workspace }}/${{ env.zipFile }}"
-          fi
-
-      - name: Check if the unityPackage exists
-        run: |
-          if [ ! -f "${{ github.workspace }}/${{ env.unityPackage }}" ]; then
-            echo "File not found: ${{ github.workspace }}/${{ env.unityPackage }}"
-          else
-            echo "Found: ${{ github.workspace }}/${{ env.unityPackage }}"
-          fi
-
-      - name: Check if the package.json exists
-        run: |
-          if [ ! -f "${{ github.workspace }}/${{ env.packagePath }}/package.json" ]; then
-            echo "File not found: ${{ github.workspace }}/${{ env.packagePath }}/package.json"
-          else
-            echo "Found: ${{ github.workspace }}/${{ env.packagePath }}/package.json"
-          fi
-
       # Publish the Release to GitHub
       - name: Make Release
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
         with:
           files: |
-            ${{ github.workspace }}/${{ env.zipFile }}
-            ${{ github.workspace }}/${{ env.unityPackage }}
+            ${{ env.zipFile }}
             ${{ env.packagePath }}/package.json
           tag_name: ${{ env.version }}
 
