アニメ追加の基本の実装
close #4

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ crashlytics-build.properties
 README.md.meta
 package.json.meta
 LICENSE.meta
+Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller
+Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller.meta
