--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ package.json.meta
 LICENSE.meta
 Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller
 Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller.meta
+Assets/BearsDen/CustomAnimatorControllers/~*
