--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.github.pandrabox.emoteprefab",
-  "version": "1.0.19",
+  "version": "1.1.0-Beta1",
   "displayName": "EmotePrefab",
   "author": {
     "name": "pandra"
