一時ファイルをWorkフォルダにまとめる

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ LICENSE.meta
 Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller
 Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller.meta
 Assets/BearsDen/CustomAnimatorControllers/~*
+/Work
