一時フォルダをgit管理から除外

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller
 Assets/BearsDen/CustomAnimatorControllers/Action_Work.controller.meta
 Assets/BearsDen/CustomAnimatorControllers/~*
 /Work
+Work.meta
